syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.kotlang.social";
option java_outer_classname = "CommonInternal";

option go_package = "github.com/Kotlang/socialGo/generated";

package social;

message SocialStatusResponse {
    string status = 1;
}

message SocialProfile {
    string photoUrl = 1;
    string name = 2;
    string occupation = 3;
    string userId = 4;
}

// Can be used for uploaded images/videos into our storage bucket.
// Also it can be used for youtube preview, vimeo preview, tik-tok, etc.
message MediaUrl {
    string url = 1;

    // Ex: image/jpeg, image/png, video/mp4, video/quicktime, audio/mpeg.
    string mimeType = 2;
}

message WebPreview {
    string title = 1;
    string previewImage = 2;
    string url = 3;
    string description = 4;
}
message Location {
    double lat = 1;
    double long = 2;
}